# tidal2mopidy

./: pyproject.toml  tidal2mopidy.py
