[tool.poetry]
name = "tidal2mopidy"
version = "0.1.0"
description = "Tidal Playlists to Mopidy"
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
tidalapi = "^0.6.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
